--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ p {
 <div id="clock">
     <p class="date">{{ date }}</p>
     <p class="time">{{ time }}</p>
-    <p class="text">数字时钟</p>
+    <p class="text">Get busy livng,ore get busy dying</p>
 </div>
 
 <script>
